testData/quickfixes/add-missing-return/simple.go
package main

func _() int {
<error descr="Missing return at end of function"><caret>}</error>